plugins {
    id 'eclipse'
    id 'idea'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
}

version = mod_version
group = mod_group_id

base { archivesName = mod_id }

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

minecraft {
    mappings channel: 'official', version: minecraft_version
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${project.buildDir}/createSrgToMcp/output.srg"
            mods { "${mod_id}" { source sourceSets.main } }
        }
        client {}
        server { args '--nogui' }
        data {
            workingDirectory project.file('run-data')
            args '--mod', mod_id, '--all', '--output', file('src/main/generated'), '--existing', file('src/main/resources')
        }
    }
}

sourceSets.main.resources { srcDir 'src/main/generated' }

sourceSets.test {
    compileClasspath += sourceSets.main.output
    runtimeClasspath += sourceSets.main.output
}

tasks.named('compileTestJava', JavaCompile).configure {
    classpath += sourceSets.main.output
}

repositories {
    maven { name = 'Curios'; url = 'https://maven.theillusivec4.top/' }
    maven { name = 'Patchouli'; url = 'https://maven.blamejared.com/' }
    maven { name = 'JEI'; url = 'https://maven.blamejared.com/' }
    maven { name = 'GeckoLib'; url = 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }
    maven { name = 'Architectury'; url = 'https://maven.architectury.dev/' }
    maven { name = 'FTB'; url = 'https://maven.ftb.dev/releases' }
    mavenCentral()
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"

    // Curios API for Forge 1.20.1
    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:5.9.1+1.20.1:api")
    runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:5.9.1+1.20.1")

    // Patchouli guide book support for Forge 1.20.1
    compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.20.1-84-FORGE:api")
    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.20.1-84-FORGE")

    // JEI support for Forge 1.20.1
    compileOnly fg.deobf("mezz.jei:jei-1.20.1-forge-api:15.20.0.106")
    compileOnly fg.deobf("mezz.jei:jei-1.20.1-forge:15.20.0.106")
    runtimeOnly fg.deobf("mezz.jei:jei-1.20.1-forge:15.20.0.106")

    // Full prerequisite stack for high-fidelity entities, quests, and in-game references
    implementation fg.deobf("software.bernie.geckolib:geckolib-forge-${minecraft_version}:${geckolib_version}")
    implementation fg.deobf("dev.architectury:architectury-forge:${architectury_version}")
    implementation fg.deobf("dev.ftb.mods:ftb-library-forge:${ftb_library_version}")
    implementation fg.deobf("dev.ftb.mods:ftb-teams-forge:${ftb_teams_version}")
    implementation fg.deobf("dev.ftb.mods:ftb-quests-forge:${ftb_quests_version}")

    testImplementation platform('org.junit:junit-bom:5.10.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
    useJUnitPlatform()
    classpath += sourceSets.main.output
}

tasks.register('aiPreflight', Exec) {
    group = 'verification'
    description = 'Checks AI workflow gates before building.'

    def scriptFile = file('scripts/preflight.ps1')
    onlyIf { scriptFile.exists() }

    if (project.hasProperty('aiSkipVersionBumpCheck') && project.property('aiSkipVersionBumpCheck').toString().toBoolean()) {
        args '-NoProfile', '-ExecutionPolicy', 'Bypass', '-File', scriptFile.absolutePath, '-SkipVersionBumpCheck'
    } else {
        args '-NoProfile', '-ExecutionPolicy', 'Bypass', '-File', scriptFile.absolutePath
    }

    if (org.gradle.internal.os.OperatingSystem.current().isWindows()) {
        executable 'powershell'
    } else {
        executable 'pwsh'
    }
}

tasks.named('build') {
    dependsOn tasks.named('aiPreflight')
    doLast {
        exec {
            if (org.gradle.internal.os.OperatingSystem.current().isWindows()) {
                executable 'powershell'
            } else {
                executable 'pwsh'
            }
            args '-NoProfile', '-ExecutionPolicy', 'Bypass', '-File', file('scripts/preflight.ps1').absolutePath, '-RecordStateOnly'
        }
    }
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version: minecraft_version,
            forge_version: forge_version,
            mod_id: mod_id,
            mod_name: mod_name,
            mod_license: mod_license,
            mod_version: mod_version,
            mod_authors: mod_authors,
            mod_description: mod_description
    ]
    inputs.properties replaceProperties
    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) { expand replaceProperties + [project: project] }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 17
}
